src/main/java/com/example/udon_server/global/error/ErrorCode.java
package com.example.udon_server.global.error;

public enum ErrorCode {

    NOT_FOUND
}
